[package]
name = "dgame"
version = "0.1.0"
authors = ["aljazerzen <aljaz@calms.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "^0.34"
gamemath = "^0.4"
rand = "^0.7"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.5"
typetag = "0.1"
rmp-serde = "0.14.4"